# gis_agent

./: .gitignore  CLAUDE.md  README.md
SourceCode/: env-install.txt  pyproject.toml  start_api.py  start_cli.py
SourceCode/config/: config.json  config.json.template
SourceCode/docs/: README-UI.md
SourceCode/frontend/: .env.template  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
SourceCode/frontend/src/: App.tsx  index.css
SourceCode/model/: download_embedding.cmd
SourceCode/scripts/: generate_templates.py  preprocess_docs.py  test_e2e_qa.py
SourceCode/scripts/generate/: extractor.py  generator.py  models.py  queue.py  renderer.py  reviewer.py  state.py
SourceCode/src/api/: __init__.py  __main__.py  dependencies.py  main.py
SourceCode/src/cli/: __init__.py  __main__.py  args.py  commands.py  executor.py  main.py  repl.py
SourceCode/src/config/: __init__.py  loader.py  models.py
SourceCode/src/core/: __init__.py  models.py  processor.py  registry.py  validator.py  workspace.py
SourceCode/src/llm/: __init__.py  client.py  diagnosis.py  exceptions.py  intent.py  keywords.py  models.py  params.py  prompts.py  qa.py
SourceCode/src/rag/: __init__.py  preprocess.py  retriever.py
SourceCode/src/templates/: __init__.py  engine.py  scanner.py
SourceCode/tasks/: tasks-adr-0001.md  tasks-cli.md  tasks-config.md  tasks-core.md  tasks-j2-generate.md  tasks-rag.md  tasks-templates.md  tasks-ux.md  tasks-workspace.md
SourceCode/tests/integration/: conftest.py  test_end_to_end.py  (+4 more)
(+154 files in other folders)
